# project_soares

./: README.md  analise.md  concepcao.md
code/: CMakeLists.txt  Game.h  elementofase.cpp  elementofase.h  game.cpp  main.cpp  plataforma.cpp  plataforma.h  player.cpp  player.h  res.qrc
